# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.1267 2010-08-05 15:15:10 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

3.0.0 beta2 (2010/??/??)
 - (2010/08/05) Fixed bug#5670 - In Agent Interface, e. g. note action, you can
    select a file, which get's uploaded automatically. This is not working in
    customer panel.
 - (2010/08/05) Fixed bug#5625 - Article Zoom Screen -> New Message Indicator
    get's not removed after clicking on an article item.
 - (2010/08/05) Fixed bug#5671 - In Customer Panel, there are not used links in
    footer (FAQ, Help, ...).
 - (2010/08/05) Fixed bug#5635 - It's not possible to open Ticket Search feature
    in own browser tab.
 - (2010/08/02) Fixed bug#2774 - Added sha1 and sha2 for additional auth method.
    Now otrs is able to crypt passwords using sha-1 and sha-256 for users and
    customer using DB backend.

3.0.0 beta1 (2010/08/02)
 - (2010/07/30) Fixed bug#5361 - Wrong link detection, because regexp looking for url
   like "www.exam.com" and needed "xwww.exam.com", added unit test.
 - (2010/07/28) Added new sysconfig validation module layer to verify and auto-correct
    some sysconfig settings.
 - (2010/07/21) Fixed bug#5566 - StateDefault, PriorityDefault and ArticleTypeDefault
    not working in AgentTicketNote and other frontend modules.
 - (2010/07/20) Fixed bug#4483 - AgentTicketActionCommon, set radio button when select
    old/ new owner are selected.
 - (2010/07/19) Fixed bug#5563 - Static statistic file StateAction is overwritten
    by an older version.
 - (2010/07/16) Removed support for the deprecated DTL commands <dtl if>, <dtl set>
    and <dtl system-call>. They were deprecated since OTRS 2.2.