@@ -1,6 +1,6 @@
 /**
  * @project     OTRS (http://www.otrs.org) - Agent Frontend
- * @version     $Revision: 1.9 $
+ * @version     $Revision: 1.10 $
  * @copyright   OTRS AG
  * @license     AGPL (http://www.gnu.org/licenses/agpl.txt)
  */
@@ -23,7 +23,7 @@
 .OverviewLarge {
     margin: 8px 16px 8px 8px;
 }
-    
+
 .RTL .OverviewLarge {
     margin-right: 8px;
     margin-left: 16px;
@@ -34,7 +34,7 @@
     border-right: 1px solid #C5C5C5;
     border-bottom: 1px solid #C5C5C5;
 }
-    
+
 .OverviewLarge > li:hover {
     border-bottom: none;
 }
@@ -60,6 +60,10 @@
 
 .OverviewLarge > li:hover .Infos table label {
     color: #751;
+}
+
+.OverviewLarge > li:hover .Infos table a {
+    color: #fff;
 }
 
 .OverviewLarge > li.Last {
