@@ -1,6 +1,6 @@
 /**
  * @project     OTRS (http://www.otrs.org) - Agent Frontend
- * @version     $Revision: 1.2 $
+ * @version     $Revision: 1.3 $
  * @copyright   OTRS AG
  * @license     AGPL (http://www.gnu.org/licenses/agpl.txt)
  * @css-for     IE7
@@ -19,8 +19,8 @@
 
 #TicketOverviewMedium {
     margin-top: 42px;
-}   
-    
+}
+
 .OverviewMedium li {
     margin-bottom: -3px;
 }
