@@ -1,6 +1,6 @@
 /**
  * @project     OTRS (http://www.otrs.org) - Agent Frontend
- * @version     $Revision: 1.7 $
+ * @version     $Revision: 1.8 $
  * @copyright   OTRS AG
  * @license     AGPL (http://www.gnu.org/licenses/agpl.txt)
  */
@@ -52,6 +52,10 @@
 
 .OverviewMedium li:hover div.Content {
     background: transparent url(../img/table_medium_hover.png) repeat-x;
+}
+
+.OverviewMedium li:hover div.Content .Infos a {
+    color: #fff;
 }
 
 .OverviewMedium li.Last {
